--- a/app/src/main/res/layout/activity_full_view_of_the_post.xml
+++ b/app/src/main/res/layout/activity_full_view_of_the_post.xml
@@ -97,6 +97,7 @@
                     android:text="@string/prompt_title"
                     android:inputType="textMultiLine"
                     android:scrollbars="vertical"
+                    android:textStyle="bold"
                     android:textColor="@color/white"
                     android:textSize="20sp" />
 
@@ -111,7 +112,7 @@
                     android:inputType="textMultiLine"
                     android:scrollbars="vertical"
                     android:textColor="@color/white"
-                    android:textSize="20dp" />
+                    android:textSize="17sp" />
 
 
                 <TextView
@@ -159,8 +160,7 @@
                     android:verticalSpacing="10dp"
                     android:horizontalSpacing="10dp"
                     android:stretchMode="columnWidth"
-                    android:visibility="visible"
-
+                    android:visibility="gone"
                     android:gravity="center">
                 </GridView>
                 <LinearLayout
