--- a/app/src/main/res/layout/activity_marker_preview.xml
+++ b/app/src/main/res/layout/activity_marker_preview.xml
@@ -44,6 +44,7 @@
                      android:textColor="@color/black"
                      android:textSize="20dp"
                      android:layout_span="2"
+                     android:textStyle="bold"
                      android:gravity="center"
                      android:layout_marginLeft="30dp"
                      />
@@ -81,7 +82,8 @@
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="Vasili Pupkin"
-                         android:textSize="15dp"
+                         android:textStyle="bold"
+                         android:textSize="15sp"
                          android:textColor="@color/black"/>
                      <TextView
                          android:layout_width="wrap_content"
