--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -6,10 +6,78 @@
     android:layout_height="match_parent"
     tools:context=".Note">
 
-
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="30dp"
+
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/new_post"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/new_post"
+
+            android:textAppearance="@style/new_post" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="end"
+                android:orientation="horizontal">
+
+                <ImageButton
+
+                    android:id="@+id/garbage"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_gravity="end|center"
+                    android:visibility="gone"
+                    android:layout_marginRight="15dp"
+                    android:background="#0000"
+                    android:src="@drawable/garbage" />
+
+                <ImageButton
+                    android:id="@+id/lock"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_gravity="end|center"
+
+                    android:layout_marginRight="15dp"
+                    android:background="#0000"
+                    android:onClick="onClickLock"
+                    android:src="@drawable/lock_open" />
+
+                <ImageButton
+                    android:id="@+id/add_note"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_gravity="end|center"
+
+                    android:layout_marginRight="15dp"
+                    android:background="#0000"
+                    android:onClick="onClickAddNote"
+                    android:src="@drawable/add_note" />
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginTop="55dp"
         android:layout_marginBottom="53dp"
         >
 
@@ -17,79 +85,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="20dp"
+
             android:layout_marginRight="30dp"
 
 
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/new_post"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/new_post"
-                    android:textAppearance="@style/new_post" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="end"
-                        android:orientation="horizontal">
-
-                        <ImageButton
-
-                            android:id="@+id/garbage"
-                            android:layout_width="20dp"
-                            android:layout_height="20dp"
-                            android:layout_gravity="end|center"
-                            android:visibility="gone"
-                            android:layout_marginRight="15dp"
-                            android:background="#0000"
-                            android:src="@drawable/garbage" />
-
-                        <ImageButton
-                            android:id="@+id/lock"
-                            android:layout_width="20dp"
-                            android:layout_height="20dp"
-                            android:layout_gravity="end|center"
-
-                            android:layout_marginRight="15dp"
-                            android:background="#0000"
-                            android:onClick="onClickLock"
-                            android:src="@drawable/lock_open" />
-
-                        <ImageButton
-                            android:id="@+id/add_note"
-                            android:layout_width="20dp"
-                            android:layout_height="20dp"
-                            android:layout_gravity="end|center"
-
-                            android:layout_marginRight="15dp"
-                            android:background="#0000"
-                            android:onClick="onClickAddNote"
-                            android:src="@drawable/add_note" />
-                    </LinearLayout>
-
-
-                </LinearLayout>
-
-            </LinearLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/textInputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+
                 android:textColorHint="@color/gray">
 
                 <EditText
@@ -111,10 +118,11 @@
 
             </android.support.design.widget.TextInputLayout>
 
+
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/textInputLayoutDescription"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="fill_parent"
                 android:layout_marginTop="10dp"
                 android:textColorHint="@color/gray">
 
@@ -125,15 +133,16 @@
                     android:backgroundTint="@color/gray"
                     android:hint="@string/prompt_text"
                     android:inputType="textMultiLine"
-                    android:scrollbars="vertical"
                     android:shadowColor="@color/gray"
                     android:textColor="@color/gray"
                     android:textColorHint="@color/gray"
-                    android:textSize="20dp"
+                    android:textSize="20sp"
+                    android:minLines="1"
+                    android:maxLines="5"
                     tools:layout_editor_absoluteX="4dp"
-                    tools:layout_editor_absoluteY="4dp" />
+                    tools:layout_editor_absoluteY="4dp"
+                    android:scrollbars = "vertical"/>
             </android.support.design.widget.TextInputLayout>
-
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/textInputLayoutLocation"
@@ -186,7 +195,12 @@
                     android:onClick="onClickAddMedia"
                     app:srcCompat="@drawable/add_media" />
             </LinearLayout>
-
+            <View
+                android:id="@+id/lineForAddMedia_activity_note"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/gray"
+                android:visibility="gone"/>
 
         </LinearLayout>
             <TextView
@@ -246,7 +260,7 @@
         </LinearLayout>
 
 
-    </ScrollView>
+    </android.support.v4.widget.NestedScrollView>
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigationFullView"
