--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -97,14 +97,17 @@
                     android:layout_marginTop="10dp"
                     android:gravity="center"
                     android:orientation="horizontal">
-                    <Button
+
+                    <com.facebook.login.widget.LoginButton
                         android:id="@+id/facebook_sign_in"
-                        android:layout_width="20dp"
+                        android:layout_width="21dp"
                         android:layout_height="20dp"
                         android:layout_marginLeft="20dp"
                         android:layout_marginRight="20dp"
-                        android:background="@drawable/facebook_img"
+
                         android:visibility="visible" />
+
+
                     <Button
                         android:id="@+id/twitter_sign_in"
                         android:layout_width="20dp"
