--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,12 +39,35 @@
             android:gravity="center|bottom"
             android:layout_marginBottom="25dp"
             android:orientation="horizontal">
-            <LinearLayout
 
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
                 android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/lang-ru"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:text="@string/russian"
+                        android:visibility="visible" />
+                    <Button
+                        android:id="@+id/lang-en"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:text="@string/english"
+                        android:visibility="visible" />
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/discover"
@@ -104,7 +127,6 @@
                         android:layout_height="20dp"
                         android:layout_marginLeft="20dp"
                         android:layout_marginRight="20dp"
-
                         android:visibility="visible" />
 
 
@@ -145,9 +167,11 @@
                 <Button
                     android:id="@+id/login_button"
                     android:layout_marginTop="5dp"
+                    android:textStyle="bold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:text="@string/login"
                     android:background="@drawable/login"
                     android:visibility="visible" />
                 <TextView
