--- a/app/src/main/res/layout/activity_marker_preview.xml
+++ b/app/src/main/res/layout/activity_marker_preview.xml
@@ -108,7 +108,7 @@
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
-                     android:text="Media"
+                     android:text="@string/media"
                      android:textSize="13dp"
                      android:textColor="@color/black"
                      />
