--- a/app/src/main/res/layout/activity_setting_menu_for_full_view.xml
+++ b/app/src/main/res/layout/activity_setting_menu_for_full_view.xml
@@ -49,7 +49,7 @@
                         android:id="@+id/editPostFromTextMenu"
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
-                        android:text="Edit post"
+                        android:text="@string/edit_post_"
                         android:textColor="@color/black"
                         android:textSize="15dp"
                         android:layout_span="2"
@@ -66,7 +66,7 @@
                             android:gravity="center"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Delete post"
+                            android:text="@string/delete_post"
                             android:textSize="15dp"
                             android:textColor="@color/black"/>
                 </TableRow>
@@ -77,7 +77,7 @@
                         android:gravity="center"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Share post"
+                        android:text="@string/share_post"
                         android:textSize="15dp"
                         android:textColor="@color/black"
                         />
@@ -89,7 +89,7 @@
                         android:gravity="center"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Report"
+                        android:text="@string/report"
                         android:textSize="15dp"
                         android:textColor="@color/black"
                         />
@@ -105,7 +105,7 @@
                             android:layout_height="wrap_content"
                             android:textColor="@color/black"
                             android:textSize="15dp"
-                            android:text="Info"/>
+                            android:text="@string/info"/>
                 </TableRow>
 
             </TableLayout>
